# rosetta-soil

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.notes  README.rst  pyproject.toml  setup.cfg  setup.py
rosetta/: ANN_Module.py  DB_Module.py  __init__.py  rosetta.py
src/rosetta/: __init__.py  _version.py  nn_model.py  rosetta.py
src/rosetta/data/: rose1_mod2_0.npz  rose1_mod2_1.npz  rose1_mod3_0.npz  rose1_mod3_1.npz  rose1_mod4_0.npz  rose1_mod4_1.npz  rose1_mod5_0.npz  rose1_mod5_1.npz  rose1_unsat_k.npz  rose3_mod2_0.npz  rose3_mod3_0.npz  rose3_mod4_0.npz  rose3_mod5_0.npz
tests/: data.py  test_nn_model.py  test_rosetta.py  test_rosetta1.py  test_rosetta3.py  test_unsat_k.py
tests/data/: rose1_mod2_inputs.txt  rose1_mod2_mean.txt  rose1_mod2_std.txt  rose1_mod3_inputs.txt  rose1_mod3_mean.txt  rose1_mod3_std.txt  rose1_mod4_inputs.txt  rose1_mod4_mean.txt  rose1_mod4_std.txt  rose1_mod5_inputs.txt  rose1_mod5_mean.txt  rose1_mod5_std.txt
