[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rosetta-soil"
dynamic = ["version"]
dependencies = ["numpy"]
authors = [{ name="Todd Skaggs", email="todd.skaggs@usda.gov" }]
description = "Predict soil hydraulic parameters from basic soil properties."
readme = "README.rst"
requires-python = ">=3.11"
classifiers=[
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/usda-ars-ussl/rosetta-soil"

[tool.hatch.build]
packages = ["src/rosetta"]

[tool.hatch.build.targets.wheel]
include = [
  "src/rosetta/data/rose1_mod2_0.npz",
  "src/rosetta/data/rose1_mod2_1.npz",
  "src/rosetta/data/rose1_mod3_0.npz",
  "src/rosetta/data/rose1_mod3_1.npz",
  "src/rosetta/data/rose1_mod4_0.npz",
  "src/rosetta/data/rose1_mod4_1.npz",
  "src/rosetta/data/rose1_mod5_0.npz",
  "src/rosetta/data/rose1_mod5_1.npz",
  "src/rosetta/data/rose1_unsat_k.npz",
  "src/rosetta/data/rose3_mod2_0.npz",
  "src/rosetta/data/rose3_mod3_0.npz",
  "src/rosetta/data/rose3_mod4_0.npz",
  "src/rosetta/data/rose3_mod5_0.npz",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.version]
path = "src/rosetta/_version.py"

